--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -703,7 +703,7 @@
     <string name="app_settings.edit_profile.toast_blog_title_empty">Blog Title cannot be empty</string>
     <string name="app_settings.edit_profile.toast_blog_title_special_char">Blog Title should not contain any special characters</string>
     <string name="app_settings.edit_profile.toast_special_not_allowed">Special characters are not allowed</string>
-    <string name="app_settings.edit_profile.toast_user_bio_empty">User bio cannot be empty</string>
+    <string name="app_settings.edit_profile.toast_user_bio_empty">Tell us ABOUT YOURSELF</string>
     <string name="app_settings.edit_profile.toast_user_bio_max">Maximum limit for bio is</string>
     <string name="app_settings.edit_profile.toast_user_bio_words">words</string>
     <string name="app_settings.edit_profile.toast_incorrect_date">Please enter a valid date for kids birthday</string>
